--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "prepare": "husky install",
-    "build": "pnpm --dir=meet build",
-    "dev": "concurrently --names 'WEB,SERVER' -c 'auto' \"pnpm --dir=meet dev\" \"cargo rr --bin lkgpt\"",
+    "build": "pnpm --dir=demo build",
+    "dev": "concurrently --names 'WEB,SERVER' -c 'auto' \"pnpm --dir=demo dev\" \"cargo rr --bin new_media\"",
     "format": "concurrently --names 'fmt:web,fmt:rs,fmt:toml' -c 'auto' \"pnpm format:prettier\" \"pnpm format:rs\" \"pnpm format:toml\"",
     "format:prettier": "prettier --write \"**/*.{js,ts,tsx}\"",
     "format:rs": "cargo fmt --all",
