--- a/new_media/Cargo.toml
+++ b/new_media/Cargo.toml
@@ -34,3 +34,10 @@ serde_json = "1.0.108"
 tokio = { version = "1.33.0", features = ["full"] }
 url = "2.5.0"
 wgpu = { version = "0.17.1" }
+
+[target.x86_64-unknown-linux-gnu.dependencies]
+winit = { version = "0.29.10", default-features = false, features = ["x11"]}
+
+# [target.i686-unknown-linux-gnu.dependencies]
+# winit = { version = "0.29.10", default-features = false, features = ["x11"]}
+
