--- a/new_media/Cargo.toml
+++ b/new_media/Cargo.toml
@@ -9,14 +9,13 @@ default-run = "new_media"
 anyhow = "1.0.75"
 async-net = "2.0.0"
 base64 = "0.21.5"
-bevy = { version = "0.12.0", default-features = false, features = [
+bevy = { version = "0.12.1", default-features = false, features = [
   "bevy_asset",
   "bevy_core_pipeline",
   "bevy_render",
-  # "multi-threaded"
 ] }
 bevy_ws_server = { git = "https://github.com/cs50victor/bevy-ws-server.git", branch = "main"}
-bevy_gaussian_splatting = { git = "https://github.com/mosure/bevy_gaussian_splatting.git", branch="main", default-features = true}
+bevy_gaussian_splatting = { version = "2.0.2", default-features = true }
 bevy_panorbit_camera = "0.10.0"
 bevy_web_asset = "0.7.0"
 bytes = "1.5.0"
@@ -25,7 +24,7 @@ crossbeam-channel = "0.5.10"
 dotenvy = "0.15.7"
 futures = "0.3.29"
 futures-intrusive = "0.5.0"
-image = { version = "0.24.7", default-features = false }
+image = { version = "0.24.7", default-features = false, features = ["png"] }
 log = "0.4.20"
 pollster = "0.3.0"
 pretty_env_logger = "0.5.0"
@@ -33,7 +32,7 @@ serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.33.0", features = ["full"] }
 url = "2.5.0"
-wgpu = { version = "0.17.1" }
+wgpu = "0.17.1"
 tungstenite = "0.21.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
