--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["new_media"]
+members = ["crates/*"]
 
 package.rust-version = "1.75.0"
 
@@ -19,3 +19,20 @@ panic = "abort"   # Abort on panic, instead of unwinding the stack.
 [profile.prod]
 inherits = "release"
 strip = true         # Automatically strip symbols from the binary.
+
+
+[workspace.dependencies]
+anyhow = "1.0.75"
+async-net = "2.0.0"
+base64 = "0.21.5"
+bevy = { version = "0.12.1", default-features = false, features = [
+  "bevy_asset",
+  "bevy_core_pipeline",
+  "bevy_render",
+] }
+bevy_panorbit_camera = "0.10.0"
+crossbeam-channel = "0.5.10"
+log = "0.4.20"
+pretty_env_logger = "0.5.0"
+wgpu = { version = "0.17.1", features = ["vulkan-portability"] }
+tungstenite = "0.21.0"
