--- a/examples/minimal/Cargo.toml
+++ b/examples/minimal/Cargo.toml
@@ -6,6 +6,6 @@ rust-version.workspace = true
 
 [dependencies]
 bevy = { workspace = true }
-bevy_frame_capture = { path = "../../crates/bevy_frame_capture"}
+bevy_headless = { path = "../../crates/bevy_headless"}
 log = { workspace = true }
 pretty_env_logger = { workspace = true }
