--- a/new_media/Cargo.toml
+++ b/new_media/Cargo.toml
@@ -22,6 +22,7 @@ serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tungstenite = { workspace = true }
 winit = { version = "0.29.10", optional = true }
+openssl = { version = "0.10.63", features = ["vendored"] }
 
 [features]
-docker = ["dep:winit"]
+docker = ["dep:winit","bevy/wayland", "bevy/x11"]
