--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,9 @@
 # Allow files and directories
 !/.cargo/
 !/Cargo.toml
+!/start.sh
+!/labwc
+!/sway
 !/crates/bevy_ws_server
 !/crates/bevy_headless
 !/new_media/Cargo.toml
