--- a/new_media/Cargo.toml
+++ b/new_media/Cargo.toml
@@ -21,8 +21,7 @@ pretty_env_logger = { workspace = true }
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tungstenite = { workspace = true }
-winit = { version = "0.29.10", optional = true }
-openssl = { version = "0.10.63", features = ["vendored"] }
+openssl = { version = "0.10.63", features = ["vendored"], optional = true}
 
 [features]
-docker = ["dep:winit","bevy/wayland", "bevy/x11"]
+docker = ["dep:openssl","bevy/wayland", "bevy/x11"]
