refactor: remote_asset dir and use .workspace syntax

--- a/crates/minimal_example/Cargo.toml
+++ b/crates/minimal_example/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 rust-version.workspace = true
 
 [dependencies]
-bevy = { workspace = true }
+bevy.workspace = true
 bevy_headless = { path = "../../crates/bevy_headless"}
-log = { workspace = true }
-pretty_env_logger = { workspace = true }
+log.workspace = true
+pretty_env_logger.workspace = true
