--- a/crates/bevy_remote_asset/Cargo.toml
+++ b/crates/bevy_remote_asset/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 rust-version.workspace = true
 
 [dependencies]
+bevy.workspace = true 
+pin-project = "1.1.3"
+surf = {version = "2.3", default-features = false, features = ["h1-client-rustls"]}
