refactor: use ubuntu for testing

--- a/.github/workflows/ci-rs.yml
+++ b/.github/workflows/ci-rs.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   ci-rs:
-    runs-on: [ macos-latest, ubuntu-latest]
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
