--- a/.github/workflows/ci-rs.yml
+++ b/.github/workflows/ci-rs.yml
@@ -49,7 +49,7 @@ jobs:
         run: cargo build --release --features docker
 
       - name: Test
-        run: cargo test --release
+        run: cargo test --release --features docker
 
       - name: Lint
         run: cargo fmt --all -- --check
