feat: add remotion

--- a/www/package.json
+++ b/www/package.json
@@ -6,29 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "remotion": "remotion studio",
+    "render": "remotion render",
+    "deploy": "node deploy.mjs"
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.0",
     "@fal-ai/serverless-client": "^0.7.0",
     "@fal-ai/serverless-proxy": "^0.6.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@remotion/bundler": "^4.0.116",
+    "@remotion/cli": "^4.0.116",
+    "@remotion/google-fonts": "^4.0.116",
+    "@remotion/lambda": "^4.0.116",
+    "@remotion/paths": "^4.0.116",
+    "@remotion/player": "^4.0.116",
+    "@remotion/shapes": "^4.0.116",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.335.0",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^2.2.0"
+    "remotion": "^4.0.116",
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
+    "@remotion/eslint-config": "^4.0.116",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.10.8",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
+    "@types/web": "^0.0.139",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "eslint": "8.56.0",
